--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -1,1 +1,14 @@
+#enable actuator
+management.endpoints.web.exposure.include=*
 
+#DataSource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#accessing the H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.setting.
