--- a/user-service-prod.properties
+++ b/user-service-prod.properties
@@ -9,7 +9,7 @@ spring.datasource.password=Tharanianand@2710
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
