--- a/attendence-service-dev.properties
+++ b/attendence-service-dev.properties
@@ -1,14 +1,18 @@
-#enable actuator
-management.endpoints.web.exposure.include=*
-
-#DataSource
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# H2 database configuration
+spring.datasource.url=jdbc:h2:mem:E_Payroll;
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-#accessing the H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.h2.console.setting.
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format-sql=true
+
+# enable actuator
+management.endpoints.web.exposure.include=*
+
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connection-timeout=60000
+
+management.endpoint.env.show-values=ALWAYS
