--- a/attendence-service-dev.properties
+++ b/attendence-service-dev.properties
@@ -1,18 +1,30 @@
 # H2 database configuration
-spring.datasource.url=jdbc:h2:mem:E_Payroll;
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:mphasisdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Accessing the H2 Console
 spring.h2.console.enabled=true
+
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# enable actuator
-management.endpoints.web.exposure.include=*
+ Don't forget this property - **
+ spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.connection-timeout=60000
+ management.endpoints.web.exposure.include=*
 
-management.endpoint.env.show-values=ALWAYS
+ management.endpoint.env.show-values=ALWAYS
+
+# working with schema.sql & data.sql 
+#spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.platform=h2
+spring.sql.init.schema=classpath:db/schema-h2.sql
+spring.sql.init.data=classpath:db/data-h2.sql
